# backend

./: .dockerignore  .gitignore  .trivyignore  APP_MIGRATION_INFO.md  DEVELOPMENT.md  DOCKER.md  DOCKER_QUICKREF.md  Dockerfile  Dockerfile.dev  MIGRATIONS.md  Makefile  README.md  alembic.ini  config.py  database.py  main.py  migrate.py  models.py  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml  docker-build.yml
alembic/: README.md  env.py
alembic/versions/: 2025_12_08_1820-d565118f6bcc_initial_migration.py  2025_12_30_1601-922872ac64c5_add_task_table_and_celerytaskid.py  2026_01_10_1702-39b084214589_remove_dep_status_and_update_user_group_.py  2026_01_11_1615-6d874207aff0_add_keycloak_support.py  2026_01_25_1609-132e9172d7f1_drop_users_password.py  2026_01_26_1908-fc856a18c82d_add_names.py  2026_05_17_0022-e00ea943757b_add_destroyed_task_status.py  2026_05_25_1200-a1b2c3d4e5f6_add_fk_indexes_and_cascade_deletes.py  2026_05_25_1400-b2c3d4e5f6a7_add_user_openstack_credentials.py  2026_05_25_1800-c3d4e5f6a7b8_tasks_nullable_celery_id_and_active_uq.py  2026_06_01_1100-d4e5f6a7b8c9_tasks_progress_columns.py  2026_06_01_1300-e5f6a7b8c9d0_deployments_soft_delete.py  2026_06_01_1430-f6a7b8c9d0e1_apps_soft_delete.py  2026_06_01_1500-a7b8c9d0e1f2_apps_image_mime.py  2026_06_16_1029-cd8fc0985a36_add_app_version_approvals_and_is_.py  2026_06_24_1448-73fd123a60aa_redeploy.py  2026_06_24_1912-0e43dd2bc856_redeploy.py  2026_06_26_1205-b320979d7cd5_add_notes_to_app_version_approvals.py  2026_06_27_1000-f1a2b3c4d5e6_course_teachers.py  2026_06_27_1127-8a6766f6326b_course_to_teacher.py  2026_06_27_1200-a8b9c0d1e2f3_course_teachers_backfill.py
app/: alembic.ini  celery_app.py  config.py  database.py  main.py  models.py  schemas.py
app/alembic/: env.py
app/alembic/versions/: e18143c58b88_create_users_table.py
app/api/: Dockerfile  requirements.txt
app/api/v1/: api.py  users.py
app/core/: config.py
app/crud/: __init__.py  app_version_approvals.py  apps.py  courses.py  deployments.py  locks.py  openstack_credentials.py  tasks.py  teams.py  user_groups.py  users.py
app/db/: session.py
app/db/models/: user.py
app/docker/: docker-compose.dev.yml
app/migrations/: env.py
app/routers/: admin_apps.py  apps.py  auth.py  auth_keycloak.py  courses.py  dashboard.py  deployments.py  git_operations.py  openstack_credentials.py  openstack_resources.py  quotas.py  tasks.py  teams.py  user_groups.py  users.py
app/schemas/: user.py
app/services/: celery_client.py  celery_event_listener.py  clouds_yaml_parser.py  deployment_notifier.py  deployment_pubsub.py  deployment_status.py  email_service.py  git_service.py  lifecycle.py  openstack_client.py  openstack_validator.py  reconciler.py  task_service.py  tf_state_parser.py
app/templates/email/: base.html  owner_summary.html  owner_summary.txt  user_invite.html  user_invite.txt
app/tests/: conftest.py  test_health.py
app/utils/: app_image.py  auth.py  capabilities.py  crypto.py  keycloak_auth.py  permissions.py  time.py
routers/: tasks.py  users.py
services/: celery_client.py  git_service.py
tests/: conftest.py  test_admin_apps_deactivate.py  test_app_version_approvals_and_openstack_credentials_crud.py  test_approval_workflow.py  test_apps.py  test_apps_multi_packer.py  test_apps_withdraw_and_approvals.py  test_celery_infra_translation.py  test_courses_api.py  test_crud_tasks_users_apps.py  test_crud_teams_courses.py  test_dashboard_api.py  test_deployment_files.py  test_deployment_resources_endpoint.py  test_deployment_scope_validation.py  test_deployments.py  test_deployments_pause_resume.py  test_deployments_resend_access.py  test_health.py  test_keycloak_refresh.py  test_lifecycle.py  test_locks.py  test_marker_file_scope.py  test_openstack_client_cache.py  test_openstack_credentials_api.py  test_openstack_credentials_crud.py  test_openstack_resources_api.py  test_packer_discovery.py  test_quotas_api.py  test_tasks_api.py  test_teams_api.py  test_tf_state_parser.py  test_users_api.py
tests/unit/: conftest.py  test_app_image.py  test_capabilities.py  test_capability_ensure_wrappers.py  test_celery_event_listener_helpers.py  test_clouds_yaml_parser.py  test_crypto.py  test_deployment_notifier.py  test_deployment_status_adapters.py  test_email_service.py  test_git_service.py  test_openstack_validator.py  test_schemas_openstack_validator.py  test_utils_permissions.py
utils/: auth.py
