[tool.poetry]
name = "backend-api"
version = "1.0.0"
description = "FastAPI Backend with Auth, Git & Celery Integration"
license = "Apache-2.0"
authors = [
    "Your Name <your.email@example.com>"
]
keywords = ["fastapi", "celery", "git", "authentication", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
homepage = "https://github.com/six7-click-n-deploy/backend"
repository = "https://github.com/six7-click-n-deploy/backend"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.109.0"
uvicorn = {extras = ["standard"], version = ">=0.27.0"}
sqlalchemy = ">=2.0.25"
alembic = ">=1.13.1"
psycopg2-binary = ">=2.9.9"
pydantic = ">=2.5.3"
pydantic-settings = ">=2.1.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
passlib = ">=1.7.4"
bcrypt = ">=4.0.0,<5.0.0"
python-multipart = ">=0.0.6"
celery = ">=5.3.6"
redis = ">=5.0.1"
gitpython = ">=3.1.41"
email-validator = ">=1.3.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.4.4"
pytest-asyncio = ">=0.23.3"
pytest-cov = ">=4.1.0"
httpx = ">=0.26.0"
ruff = ">=0.1.13"
mypy = ">=1.8.0"
pre-commit = ">=3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ----------------------------------------------------------------
# RUFF CONFIGURATION (Linting & Formatting)
# ----------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"
]
ignore = [
    "E501", "B008", "ARG001", "ARG002"
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["routers", "services", "utils", "models", "schemas", "database", "config"]

# ----------------------------------------------------------------
# PYTEST CONFIGURATION
# ----------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

# ----------------------------------------------------------------
# MYPY CONFIGURATION (Type Checking)
# ----------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "passlib.*",
    "jose.*",
    "git.*",
]
ignore_missing_imports = true
